a lot of changes! have basic code generation up and running for independent tasks. works for two configuration files. scripts are generated. tlb has priority ordering. fixed a couple of bugs in repos and mem_manager along the way.