@@ -3,6 +3,7 @@ package codegen.gen;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.lang.ProcessBuilder.Redirect;
 import java.util.ArrayList;
 
 public class NiosSBTCommand {
@@ -48,28 +49,47 @@ public class NiosSBTCommand {
 		// then add more stack regions
 		// each function should get a stack region
 		String bspSettings = core.bspDir + "/settings.bsp";
-		ResizeMainMem(bspSettings, core.mainMemStartAddress, core.mainMemSize);
 		for (int i = 1; i < sbList.size(); i++) {
 			StackBin sb = sbList.get(i);
-			addStackBins(bspSettings, sb.startAddress[coreID], sb.name);
-			
+			try {
+				if(sb.existsInSettings(bspSettings)){
+					if(!sb.matchesSettings(bspSettings,coreID)){
+						ResizeMainMem(bspSettings, core.mainMemStartAddressOffset, core.mainMemSize);
+						updateStackBins(bspSettings, sb.startAddress[coreID], sb.name);
+					}
+				} else {
+					addStackBins(bspSettings, sb.startAddress[coreID], sb.name);
+					ResizeMainMem(bspSettings, core.mainMemStartAddressOffset, core.mainMemSize);
+				}
+			} catch (IOException e) {
+				e.printStackTrace();
+			}
 		}
+	}
+
+	private void updateStackBins(String bspSettings, int binStartAddress, String name) {
+		String[] cmd = new String[] { sbtLocation, "nios2-bsp-update-settings",
+				"--settings", bspSettings, "--cmd", "update_memory_region", name,
+				"memory_0_onchip_memoryMain",
+				"0x" + Integer.toString(binStartAddress, 16),
+				"0x" + Integer.toString(StackBin.size, 16)
+		};
+		runCommand(cmd);
+		
 	}
 
 	private void addStackBins(String bspSettings, 
 			int binStartAddress, String name) {
-			String[] cmd = new String[] { sbtLocation,
-					"nios2-bsp-update-settings", "--settings", bspSettings,
-					"--cmd", "add_memory_region", name,
-					"memory_0_onchip_memoryMain",
-					Integer.toString(binStartAddress, 16),
-					Integer.toString(StackBin.size, 16)/*
+		String[] cmd = new String[] { sbtLocation, "nios2-bsp-update-settings",
+				"--settings", bspSettings, "--cmd", "add_memory_region", name,
+				"memory_0_onchip_memoryMain",
+				"0x" + Integer.toString(binStartAddress, 16),
+				"0x" + Integer.toString(StackBin.size, 16)/*
 														 * 1 bin already
 														 * accounted for
 														 */, "--cmd",
-					"add_section_mapping", "." + name,
-					name };
-			runCommand(cmd);
+				"add_section_mapping", "." + name, name };
+		runCommand(cmd);
 		
 	}
 
@@ -78,46 +98,55 @@ public class NiosSBTCommand {
 		String[] cmd = new String[] { sbtLocation, "nios2-bsp-update-settings",
 				"--settings", bspSettings, "--cmd", "update_memory_region",
 				"memory_0_onchip_memoryMain", "memory_0_onchip_memoryMain",
-				Integer.toString(mainMemStartAddress, 16),
-				Integer.toString(newSize, 16) /* 1 bin already accounted for */
+				"0x" + Integer.toString(mainMemStartAddress, 16),
+				"0x" + Integer.toString(newSize, 16) /* 1 bin already accounted for */
 		};
 		runCommand(cmd);
 	}
 
-	private void runCommand(String[] cmd) {
+	public void runCommand(String[] cmd) {
+		
+
+
+		
+		
+		ProcessBuilder builder = null;
 		Process p = null;
 		try {
-			p = Runtime.getRuntime().exec(cmd);
-		} catch (IOException e1) {
-			e1.printStackTrace();
+			builder = new ProcessBuilder(cmd);
+			builder.redirectErrorStream(true);
+			builder.redirectOutput(Redirect.INHERIT);
+		    
+			p = builder.start();
+		} catch (IOException e2) {
+			// TODO Auto-generated catch block
+			e2.printStackTrace();
 		}
+		
+		
 		try {
 			p.waitFor();
 		} catch (InterruptedException e) {
 			e.printStackTrace();
-		}
-
+		}	 	
+		    System.out.println("Program terminated!");
+		    
 		if (p.exitValue() != 0) {
 			try {
 				throw new NiosSBTException("Error building project on "
 						+ cmd[1]);
 			} catch (NiosSBTException e) {
-				BufferedReader bufferedReader = new BufferedReader(
-						new InputStreamReader(p.getInputStream()));
-
-				String line;
-				ArrayList<String> output = new ArrayList<String>();
-
-				try {
-					while ((line = bufferedReader.readLine()) != null) {
-						output.add(line);
-					}
-				} catch (IOException e1) {
-					e1.printStackTrace();
-				}
 				e.printStackTrace();
 			}
 		}
+	}
+
+	public void generateCriticalLibrary(String libDir, String bspDir) {
+		String[] cmd = new String[] { sbtLocation,
+				"nios2-lib-generate-makefile", "--lib-dir", libDir, "--lib-name", "critical_library", "--bsp-dir",
+				bspDir, "--src-dir",libDir};
+		runCommand(cmd);
+		
 	}
 
 }
